# baseball-coaster-data

./: .gitignore  LICENSE  README.md
.github/workflows/: validate.yml
artifacts/latest/: completeness.json  reparse_summary_issue30.json  reparse_summary_issue31.json
docs/design/: DECISION.md  SCHEMA_CANDIDATE_A.md  SCHEMA_CANDIDATE_B.md  (+1 more)
pipeline/: pyproject.toml
pipeline/bc_pipeline/: __init__.py  archive.py  backfill.py  completeness.py  config.py  fetch.py  fetcher.py  frequencies.py  grammar.py  html_struct.py  identity.py  parse.py  refresh.py  reparse_summary.py  replay.py  schedule.py  serialize.py  transport.py
pipeline/tests/: conftest.py  test_archive.py  test_backfill.py  test_completeness.py  test_config.py  test_fetch.py  test_fetcher.py  test_frequencies.py  test_refresh.py  test_schedule.py  test_transport.py
pipeline/tests/fixtures/: schedule_fixture.txt
schemas/: frequencies.schema.json  game.schema.json
scripts/: check_schema_invariants.py  validate_frequencies.py  validate_games.py
tests/: _support.py  test_build_events.py  test_determinism.py  test_docs.py  test_family2_name_resolution.py  test_golden.py  test_grammar.py  test_html_struct.py  test_identity.py  test_identity_league.py  test_no_circular_import.py  test_parse.py  test_parse_negative_path.py  test_promoted_dh_pitching_sub.py  test_promoted_dh_sub_fielding_side_fallback.py  test_promoted_foul_out.py  test_promoted_singled_up_the_middle.py  test_promoted_two_name_dh_sub.py  test_reparse_summary.py  test_replay.py  test_schema_1_2_0.py  test_schema_1_3_0.py  test_serialize.py
(+1289 files in other folders)
