[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball-coaster-pipeline"
version = "0.1.0"
description = "Fetch, parse, and replay Long Beach Coast game data into canonical game files."
requires-python = ">=3.10"
dependencies = [
    "jsonschema",
    "requests",
]

[tool.setuptools]
packages = ["bc_pipeline"]
